# sops-mcp

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  base-images.lock.json  pyproject.toml  requirements.in  requirements.lock.txt  server.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/vuln-scan/: action.yml
.github/workflows/: ci.yml  create-release.yml  publish-mcp-registry.yml  publish-pypi.yml  publish.yml  supply-chain.yml
lib/: compile_requirements.sh  extract_changelog.py  pin_base_images.py  verify_base_images.py  verify_requirements.py  verify_version.py
src/sops_mcp/: __init__.py  __main__.py  authelia_hash.py  secrets_derive.py  secrets_generator.py  server.py  sops.py
tests/: test_authelia_hash.py  test_error_messages.py  test_integration.py  test_secrets_derive.py  test_secrets_generator.py  test_sops.py  test_transport_security.py
