[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sops-mcp"
version = "0.10.0"
description = "MCP server for creating and managing SOPS-encrypted secrets"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "mcp>=1.23.0,<2.0.0",
    "python-multipart>=0.0.26",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
sops-mcp = "sops_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sops_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
