[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sops-mcp"
version = "0.10.0"
description = "MCP server for creating and managing SOPS-encrypted secrets"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
    "mcp",
    "model-context-protocol",
    "sops",
    "secrets",
    "secret-management",
    "encryption",
    "age",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp>=1.23.0,<2.0.0",
    "python-multipart>=0.0.26",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/privacyplaybook/sops-mcp"
Repository = "https://github.com/privacyplaybook/sops-mcp"
Issues = "https://github.com/privacyplaybook/sops-mcp/issues"
Changelog = "https://github.com/privacyplaybook/sops-mcp/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
sops-mcp = "sops_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sops_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
